working version with product flavors

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,11 +16,13 @@
         android:text="@string/instructions" />
 
     <Button
+        android:id="@+id/joke_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/instructions_text_view"
         android:onClick="tellJoke"
         android:text="@string/button_text" />
+
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
@@ -30,5 +32,6 @@
         android:layout_centerHorizontal="true"
         ads:adSize="BANNER"
         ads:adUnitId="@string/banner_ad_unit_id" />
+
 
 </RelativeLayout>
